# quant-stock

./: .env.example  .gitignore  CHANGELOG.md  MASTER_ROADMAP.md  Makefile  PROJECT_SPEC.md  PROJECT_STATUS.md  README.md  SHORT_STRATEGY_REPORT.md  STRATEGY_GUIDE.md  pyproject.toml  v2.1 Closeout.md  v2.1-validation-hardening.md  v2.2-closeout.md  v2.3-integrity-gate.md  v2.3-paper-observation-hardening.md  v2.3-priority-plan.md  v2.3R-historical-replay-maturity.md  v2.4-exit-mode-integration.md  v2.4.1-decision-amendment.md  v2.5-day0-pilot.md  v2.5-shadow-paper-observation.md  v2.5A-top50-paper-observation.md  v2.6-promotion-decision.md  修改方向.md
.github/workflows/: ci.yaml
archive/config/: okx.yaml  universe.yaml
archive/scripts/: altcoin_minswing_test.py  bootstrap_data.py  build_data_manifest.py  daily_report.py  generalization_test.py  init_research_db.py  live_signal_dual.py  market_health.py  minswing_1m_grid_search.py  minswing_grid_search.py  minute_breakout_test.py  optimize_4h.py  rolling_regime_test.py  run_all_strategies.py  run_data_quality.py  short_find_bear_periods.py  short_iterate.py  tournament_live.py  tsla_factor_iterate.py  tsla_news_backtest.py  tsla_paper_trader.py  validate_momentum_accel.py  verify_okx.py  (+4 more)
config/: settings.py
dashboard/: app.py  ledger_mock.py  ledger_reader.py
docs/: BACKLOG_SELECTION_REVIEW.md  BASELINE_TEST_RESULT.md  COPYTRADE_RULES_SPEC_V0.md  CURRENT_STATE.md  DAILY_WORKFLOW.md  FIRSTRADE_API_RESEARCH.md  FIRSTRADE_PROFILE_SETUP.md  FOLLOW_PERF_SPEC.md  INTEGRATION_NOTES.md  MIGRATION_MANIFEST.md  MIGRATION_PLAN.md  ORDER_LEDGER_SPEC.md  ORDER_LEDGER_SPEC_DASH_SIGNOFF.md  PAPER_BACKFILL_REPORT.md  PRICE_SOURCE_SPEC.md  RECON_DESIGN_V0.md  REHEARSAL_REPORT.md  RESEARCH_DB_SCHEMA.md  ROADMAP.md  SAFETY_GATE_LIB_MIGRATION.md  SELECTOR_VERIFICATION_CHECKLIST.md  SIGNAL_ADAPTER_PRERESEARCH.md  STRATEGY_GATE_POLICY.md  STRATEGY_STATUS.md  V2_1_VALIDATION_HARDENING_REPORT.md  V2_3R_REPLAY_BASELINE.md  V2_5_OOS_DEFERRED.md
files/: CLAUDE.md
registry/: strategies.yml
reports/: breakeven_stop.txt  combo_tournament.json  comparison_BTC-USDT_1d.csv  comparison_BTC-USDT_1h.csv  comparison_BTC-USDT_4h.csv  comparison_ETH-USDT_1d.csv  comparison_ETH-USDT_1h.csv  comparison_ETH-USDT_4h.csv  correlation.txt  day_of_week.txt  event_backtest.csv  final_all_strategies.csv  generalization_test.csv  hurst_analysis.txt  ichimoku_optimization.csv  momentum_rotation.txt  multi_horizon_test.csv  optimize_4h_BTC-USDT.csv  optimize_4h_ETH-USDT.csv  out_of_sample_test.csv  paper_trade_session.json  random_entry.txt  rolling_regime_test.csv  time_filter.txt  tournament.json  tp_sl_optimization.txt  trailing_stop.txt  vol_filter.txt  walk_forward_BTC-USDT.csv  walk_forward_ETH-USDT.csv
scripts/: altcoin_minswing_test.py  bootstrap_data.py  build_data_manifest.py  create_experiment.py  daily_report.py  daily_report_cron.sh  event_backtest.py  exec_kill.sh  exec_login.py  exec_rehearsal.py  exec_verify_selectors.py  fetch_top50_data.py  generalization_test.py  generate_58h_report.py  generate_final_report.py  init_research_db.py  live_signal.py  live_signal_1m.py  live_signal_dual.py  market_health.py  medic.py  minswing_1m_grid_search.py  minswing_grid_search.py  minute_breakout_test.py  monte_carlo.py  multi_horizon_test.py  optimize_4h.py  out_of_sample_test.py  paper_backfill.py  paper_forward.py  paper_forward_cron.sh  paper_monitor_v2.py  paper_runner.py  paper_trader.py  replay_copytrade_rules_v0.py  restart_team.sh  rolling_regime_test.py  run_all_strategies.py  run_backtest.py  short_aggressive_backtest.py  (+24 more)
src/: logging_setup.py
tests/: conftest.py  test_logging_setup.py  test_medic.py  test_settings.py  test_top50_monitor.py
(+362 files in other folders)
