[project]
name = "quant-stock"
version = "0.1.0"
description = "Blogger call-following pipeline: signal adapter + rule engine + local paper trading + order ledger (forked from QuantLab)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "exchange-calendars>=4.5",
    "aiohttp>=3.9",
    "polars>=1.0",
    "pandas>=2.1",
    "duckdb>=1.0",
    "pyarrow>=15.0",
    "pydantic-settings>=2.1",
    "loguru>=0.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "streamlit>=1.30",
    "plotly>=5.18",
    "feedparser>=6.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pyright>=1.1",
]
# 执行层(Firstrade 模拟盘浏览器自动化)单独成组:研究环境可不装
exec = [
    "playwright>=1.40",
]

[tool.ruff]
line-length = 120
target-version = "py311"
# 归档层只读存证,不修码不检查(历史 lint 错随归档冻结)
extend-exclude = ["archive"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E741", "B015", "SIM117", "SIM108", "SIM102"]

[tool.ruff.lint.per-file-ignores]
"src/strategies/**/*.py" = ["E702", "E501"]
"src/replay/**/*.py" = ["E501"]
"dashboard/**/*.py" = ["E402", "E501"]
"scripts/**/*.py" = ["E402", "E501", "E702", "E701", "SIM115"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
